syntax = "proto3";

option csharp_namespace = "PCW.Rpc.PostCardService";

import "Protos/command.proto";

package postCard;

service PostCard {
	rpc GetPostCard (.postCard.GetPostCardRequest) returns (.postCard.GetPostCardReply);
	rpc AddPostCard (AddPostCardRequest) returns (AddPostCardReply);
}

message GetPostCardRequest {
	int64 id = 1;
}

message GetPostCardReply {
	int64 id = 1;
	string name = 2;
	string contentType = 3;
	command.File file = 4;
	repeated string tags = 5;
}

message AddPostCardRequest {
	string name = 1;
	string contentType = 2;
	command.File file = 3;
	repeated int64 tagIds = 4;
}

message AddPostCardReply {
	int64 id = 1;
	string name = 2;
}